Fix : AdminAside z-index 수정

--- a/albalog-client/src/components/Header/Header.scss
+++ b/albalog-client/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-.admin-header {
+.header {
   position: sticky;
   top: 0;
   left: 0;
