--- a/albalog-client/src/components/Modal/Modal.scss
+++ b/albalog-client/src/components/Modal/Modal.scss
@@ -8,7 +8,8 @@
   right: 0;
   bottom: 0;
   z-index: 99;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.6);
+
   .modal-wrap {
     display: flex;
     flex-direction: column;
@@ -18,6 +19,7 @@
     border: 2px solid #dbdbdb;
     border-radius: 4px;
     padding: 4rem;
+
     .invite-title {
       text-align: center;
       margin-bottom: 4rem;
@@ -45,4 +47,8 @@
       }
     }
   }
+}
+
+.btn-invite {
+  background-color: lightgreen;
 }
