--- a/albalog-client/src/components/landing/StoreRegister/StoreRegister.scss
+++ b/albalog-client/src/components/landing/StoreRegister/StoreRegister.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   right: 0;
+  z-index:999;
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.6);
